[package]
name = "zowex"
version = "0.2.1"
authors = ["Zowe Project"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0"
dirs = "3.0.2"

[target.'cfg(target_family = "windows")'.dependencies]
uds_windows = "1.0.1"